--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/passport": "~9.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "2.4",
+        "pusher/pusher-php-server": "^4.1",
         "yajra/laravel-datatables-oracle": "^9.18"
     },
     "require-dev": {
